fix layout on ie10

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -40,6 +40,7 @@ md-toolbar {
 }
 
 .github-link {
+  text-align: right;
   font-size: 12px;
   color: rgba(255,215,64,0.5) !important;
 }
